Starting to borrow some code from https://github.com/GoogleWebComponents/google-drive

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../google-signin/google-signin.html">
 
 <!--
 Element providing solution to no problem in particular.
