Borrowed most of the code from google-drive to use as a starting point.

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -2,68 +2,179 @@
 <link rel="import" href="../google-signin/google-signin.html">
 
 <!--
-Element providing solution to no problem in particular.
+Element enabling you to upload videos to YouTube.
 
-##### Example
+##### Examples
 
-    <seed-element></seed-element>
+Manual upload with an Upload button once videos are selected:
 
-@element seed-element
-@blurb Element providing solution to no problem in particular.
+    <google-youtube-upload clientId="..."></google-youtube-upload>
+
+Automatic upload on file select, without Upload button:
+
+    <google-youtube-upload autoUpload clientId="..."></google-youtube-upload>
+
+@element google-youtube-upload
+@blurb Element enabling you to upload videos to YouTube.
 @status alpha
-@homepage http://username.github.io/seed-element
+@homepage http://googlewebcomponents.github.io/google-youtube-upload
 -->
-<polymer-element name="google-youtube-upload" attributes="notitle">
-
+<polymer-element name="google-youtube-upload" attributes="autoUpload clientId">
   <template>
+    <script src="../cors-upload-sample/upload.js"></script>
 
     <link rel="stylesheet" href="google-youtube-upload.css"/>
 
-    <content></content>
+    <google-signin
+      clientId="{{clientId}}"
+      scopes="https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube.readonly">
+    </google-signin>
 
+    <span style="display:{{ authenticated ? 'inline-block' : 'none' }}">
+      <input tabindex="0" type="file" id="files" class="custom-file-input" name="files[]" multiple on-change="{{handleFilePick}}"/>
+      <button on-click="{{manualUpload}}" id="upload" style="display:{{ autoUpload ? 'none' : 'block' }}">Upload Videos</button>
+    </span>
   </template>
 
   <script>
-
-    Polymer('seed-element', {
+    Polymer({
       /**
-       * The `noevent` event is not actually fired from here,
-       * we document it as an example of documenting events.
+       * Fired when the upload status changes.
        *
-       * @event noevent
+       * @event google-youtube-upload-upload-status
        */
 
       /**
-       * The `notitle` attribute does not yet have a purpose.
+       * Fired when files have been selected.
        *
-       * @attribute notitle
+       * @event google-youtube-upload-files-selected
+       */
+
+      /**
+       * Fired when the element attempts to upload files.
+       *
+       * @event google-youtube-upload-upload-started
+       */
+
+      /**
+       * Fired when file uploads have successfully completed.
+       *
+       * @event google-youtube-upload-upload-completed
+       */
+
+      /**
+       * Fired when file uploads have failed.
+       *
+       * @event google-youtube-upload-upload-failed
+       */
+
+      /**
+       * Fired when the upload lists are cleared.
+       *
+       * @event google-youtube-upload-upload-cleared
+       */
+
+      /**
+       * A Google Developers clientId reference
+       *
+       * @attribute clientId
        * @type string
        */
-      notitle: '',
-
+      clientId: '',
       /**
-       * The `aProp` is a property that does something cool.
+       * The queue of files being uploaded
        *
-       * @property aProp
-       * @type bool
+       * @attribute uploadList
+       * @type array
        */
-      aProp: false,
+      uploadList: [],
+      /**
+       * The queue of files that have been uploaded
+       *
+       * @attribute uploadedList
+       * @type array
+       */
+      uploadedList: [],
+      /**
+       * Whether files should be automatically uploaded
+       *
+       * @attribute autoUpload
+       * @type boolean
+       */
+      autoUpload: false,
+      /**
+       * Whether the user has authenticated or not
+       *
+       * @attribute authenticated
+       * @type boolean
+       */
+      authenticated: false,
+      ready: function () {
+        this.fire('google-youtube-upload-upload-status', { status: 'Authentication required' });
+        document.addEventListener('google-signin-success', function (e) {
+          this.accessToken = e.detail.result.access_token;
+          this.authenticated = true;
+          this.fire('google-youtube-upload-upload-status', { status: 'Ready' });
+        }.bind(this));
 
-      ready: function() {
+        document.addEventListener('google-signed-out', function (e) {
+          this.authenticated = false;
+          this.fire('google-youtube-upload-upload-status', { status: 'Please sign-in to continue.' });
+        }.bind(this));
       },
+      selectFiles: function (files) {
+        this.queue = files;
 
-      /**
-       * The `task` method does no work at this time.
-       *
-       * @method task
-       * @return {Object} Returns undefined.
-       * @param {String} dummy Serves no purpose today.
-       */
-      task: function(dummy) {
+        for (var i = 0, f; f = files[i]; i++) {
+          this.uploadList.push(f);
+        }
+
+        if (this.autoUpload) {
+          this.uploadFiles(files);
+        }
+
+        this.fire('google-youtube-upload-files-selected', { files: this.uploadList });
+        this.fire('google-youtube-upload-upload-status', { status: 'Files selected'});
+      },
+      manualUpload: function () {
+        this.uploadFiles(this.queue);
+      },
+      uploadFiles: function (files) {
+        var uploadedList = this.uploadedList;
+        this.fire('google-youtube-upload-upload-started', { files: this.uploadList });
+        this.fire('google-youtube-upload-upload-status', { status: 'Uploading' });
+
+        for (var i = 0, f; f = files[i]; i++) {
+          var uploader = new MediaUploader({
+            file: f,
+            token: this.accessToken,
+            onError: function (data) {
+              this.fire('google-youtube-upload-upload-failed', { data: data })
+            },
+            onComplete: function (data) {
+              uploadedList.push(JSON.parse(data));
+              this.fire('google-youtube-upload-upload-status', { status: 'Upload successful' });
+              this.uploadList = [];
+              this.fire('google-youtube-upload-upload-completed', { files: this.uploadedList, data: data });
+            }.bind(this)
+          });
+          uploader.upload();
+        }
+
+      },
+      tapSelect: function (evt) {
+        this.$.files.click();
+      },
+      handleFilePick: function (evt) {
+        evt.stopPropagation();
+        evt.preventDefault();
+        this.selectFiles(evt.target.files);
+      },
+      clearUploadList: function () {
+        this.uploadedList = [];
+        this.uploadList = [];
+        this.fire('google-youtube-upload-upload-cleared', { status: 'Upload lists cleared' });
       }
-
     });
-
   </script>
-
 </polymer-element>
