--- a/demo.html
+++ b/demo.html
@@ -10,64 +10,9 @@
   <body unresolved>
     <p>A <code>google-youtube-upload</code> element looks like this:</p>
 
-    <google-youtube-upload clientId="1081407441937-kb9ismfsf1nnk831pasehm47sg1qo936.apps.googleusercontent.com"></google-youtube-upload>
-
-    <p><h1>Uploads</h1></p>
-
-    <template id="status" bind="{{status}}">
-      <strong>Status</strong>: {{message}}
-    </template>
-
-    <table class="google-drive-table">
-      <tr>
-        <th>Upload queue</th>
-      </tr>
-      <template id="queue" repeat="{{uploadList}}">
-        <tr>
-          <td>{{name}}</td>
-        </tr>
-      </template>
-    </table>
-
-    <table class="google-drive-table">
-      <tr>
-        <th>Successful uploads</th>
-      </tr>
-      <template id="uploaded" repeat="{{uploadedList}}">
-        <tr>
-          <td><img src="{{iconLink}}"/>&nbsp;<strong>{{title}}</strong></td>
-          <td><a href="{{selfLink}}">Drive Link</a></td>
-          <td><a href="{{webContentLink}}">Web Link</a></td>
-          <td>{{mimeType}}</td>
-        </tr>
-      </template>
-    </table>
-
-    <script>
-      document.addEventListener('google-drive-upload-started', function(e){
-        var t = document.querySelector("#queue");
-        t.model = {};
-        t.model.uploadList = e.detail.files;
-      });
-
-      document.addEventListener('google-drive-files-selected', function(e){
-        var t = document.querySelector("#queue");
-        t.model = {};
-        t.model.uploadList = e.detail.files;
-      })
-
-      document.addEventListener('google-drive-upload-completed', function(e){
-        var t = document.querySelector("#uploaded");
-        t.model = {};
-        t.model.uploadedList = e.detail.files;
-        console.log(e.detail.files);
-      });
-
-      document.addEventListener('google-drive-upload-status', function(e){
-        var t = document.querySelector("#status");
-        t.model = {};
-        t.model.status = { message: e.detail.status };
-      });
-    </script>
+    <google-youtube-upload
+      autoUpload="true"
+      clientId="1081407441937-kb9ismfsf1nnk831pasehm47sg1qo936.apps.googleusercontent.com">
+    </google-youtube-upload>
   </body>
 </html>
