Changed the privacy state of the demo.html uploads to 'unlisted'.

--- a/demo.html
+++ b/demo.html
@@ -12,6 +12,7 @@
 
     <google-youtube-upload
       autoUpload="true"
+      privacyStatus="unlisted"
       clientId="1081407441937-kb9ismfsf1nnk831pasehm47sg1qo936.apps.googleusercontent.com">
     </google-youtube-upload>
   </body>
