--- a/demo.html
+++ b/demo.html
@@ -15,5 +15,70 @@
       privacyStatus="unlisted"
       clientId="1081407441937-kb9ismfsf1nnk831pasehm47sg1qo936.apps.googleusercontent.com">
     </google-youtube-upload>
+
+    <div id="status-container" style="display: none">
+      <div>
+        <span>Upload Progress:</span>
+        <progress max="1" value="0"></progress>
+      </div>
+      <p id="progress-info"></p>
+    </div>
+
+    <script>
+      var uploadElement = document.querySelector('google-youtube-upload');
+      var statusContainerElement = document.getElementById('status-container');
+      var progressElement = document.querySelector('progress');
+
+      uploadElement.addEventListener('youtube-upload-started', function() {
+        statusContainerElement.style.display = 'block';
+      });
+
+      uploadElement.addEventListener('youtube-upload-progress', function(e) {
+        var loaded = e.detail.loaded;
+        var total = e.detail.total;
+
+        progressElement.setAttribute('value', loaded / total);
+      });
+
+      uploadElement.addEventListener('youtube-upload-failed', function(e) {
+        statusContainerElement.style.display = 'block';
+        statusContainerElement.textContent = e.detail;
+      });
+
+      uploadElement.addEventListener('youtube-upload-completed', function(e) {
+        statusContainerElement.textContent = 'Upload complete. Video id "' + e.detail + '" is being processed...';
+      });
+
+      uploadElement.addEventListener('youtube-processing-status', function(e) {
+        statusContainerElement.textContent += '.';
+      });
+
+      uploadElement.addEventListener('youtube-processing-completed', function(e) {
+        statusContainerElement.textContent = 'Processing complete. The video is available at http://youtu.be/' + e.detail + ' and embedded below.';
+
+        var playerElement = document.createElement('google-youtube');
+        playerElement.setAttribute('videoId', e.detail);
+        statusContainerElement.appendChild(playerElement);
+      });
+
+      uploadElement.addEventListener('youtube-processing-failed', function(e) {
+        var error = '';
+        switch(e.detail.uploadStatus) {
+          case 'failed':
+            error = e.detail.failureReason;
+          break;
+
+          case 'rejected':
+            error = e.detail.rejectionReason;
+          break;
+
+          default:
+            error = 'unknown';
+          break;
+        }
+
+        statusContainerElement.textContent = 'YouTube processing failed (' + error + ').';
+      });
+    </script>
   </body>
 </html>
