Set a font-family style on the demo.html page.

--- a/demo.html
+++ b/demo.html
@@ -6,12 +6,16 @@
     <title>google-youtube-upload Demo</title>
     <script src="../platform/platform.js"></script>
     <link rel="import" href="google-youtube-upload.html">
+    <style>
+      body {
+        font-family: Helvetica, sans-serif;
+      }
+    </style>
   </head>
   <body unresolved>
     <p>A <code>google-youtube-upload</code> element looks like this:</p>
 
     <google-youtube-upload
-      autoUpload="true"
       privacyStatus="unlisted"
       clientId="1081407441937-kb9ismfsf1nnk831pasehm47sg1qo936.apps.googleusercontent.com">
     </google-youtube-upload>
